# eduAgent

./: .gitignore  CLAUDE.md  langgraph.json  main.py  pyproject.toml  trim_messages_认知.txt
.history/: pyproject_20260629133229.toml  pyproject_20260629133256.toml  pyproject_20260629133555.toml  pyproject_20260629133613.toml  pyproject_20260629134245.toml  pyproject_20260629134303.toml  pyproject_20260629134815.toml  pyproject_20260629134824.toml  pyproject_20260629134831.toml  pyproject_20260629135148.toml  pyproject_20260629135216.toml  pyproject_20260629135343.toml  pyproject_20260629135522.toml  pyproject_20260629135525.toml  pyproject_20260629135544.toml
backend/: config.py  dependencies.py
backend/core/: __init__.py  embedding.py  exceptions.py  llm_factory.py  llm_factory_v2.py  logger.py  memory.py  milvus_repo.py  query_classifier.py  reranker.py  retriever.py  retry_v1.py  retry_v2.py  schemas.py
backend/db/: migrations.py
backend/deepseek_tokenizer/: download_tokenizer.py
backend/learn_and_test/: learn_utils.py  learn_v2.py
backend/mcp/: check_client.py  search_client.py  search_server.py  web_search.py
backend/services/: mineru_service.py
backend/utils/: __init__.py  utils.py
fine_tune/configs/: template.yaml
fine_tune/data/: label_map.json  raw_data.jsonl
fine_tune/scripts/: analyze_max_length.py  (+1 more)
scripts/: delete_table.sql  init_db.sql  init_milvus.py  load_data.py  seed_data.py  test_dir_loader.py  trace_knowledge_base.py  trace_resume_pipeline.py
tests/: test_exceptions.py  test_lg_pydantic_state.py  test_logger.py  test_state.py
(+17 files in other folders)
