[project]
name = "eduagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "duckduckgo-search>=8.1.1",
    "environs>=15.0.1",
    "fastapi>=0.138.1",
    "flagembedding>=1.4.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "marshmallow>=4.3.0",
    "mcp>=1.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymilvus>=3.0.0",
    "pymupdf>=1.27.2.3",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "sentencepiece>=0.2.1",
    "setuptools>=81.0.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "sse-starlette>=3.4.5",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
    "uvicorn[standard]>=0.49.0",
]


[tool.uv]
exclude-dependencies = ["onnxruntime"]

[[tool.uv.index]]
name = "tsinghua"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://mirrors.aliyun.com/pytorch-wheels/cu130/"
format = "flat"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]
torchvision = [
  { index = "pytorch-cu130" },
]
